--- a/dev/Spacy-Rake-Tfidf.ipynb
+++ b/dev/Spacy-Rake-Tfidf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "id": "494531e8",
    "metadata": {},
    "outputs": [],
@@ -18,19 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "id": "6d47fc1f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = 'Downloads/financialphrases/all-data.csv'\n",
+    "path = 'C:/Users/Rolando/Downloads/financialphrases/all-data.csv'\n",
     "\n",
     "df = pd.read_csv(path, encoding = \"ISO-8859-1\", names = ['sentiment', 'sentence'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "id": "ada23f6b",
    "metadata": {
     "scrolled": true
@@ -139,7 +139,7 @@
        "[4846 rows x 2 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "id": "b233eb65",
    "metadata": {
     "scrolled": true
@@ -173,7 +173,7 @@
        "Name: sentence, Length: 4846, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,304 +184,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "id": "d642c185",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# path = 'Downloads/newsTitles/SEntFiN-v1.1.csv'\n",
+    "# path = 'C:/Users/Rolando/Downloads/newsTitles/SEntFiN-v1.1.csv'\n",
     "\n",
     "# df = pd.read_csv(path, encoding = \"ISO-8859-1\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "id": "6afa3b5c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>S No.</th>\n",
-       "      <th>Title</th>\n",
-       "      <th>Decisions</th>\n",
-       "      <th>Words</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>SpiceJet to issue 6.4 crore warrants to promoters</td>\n",
-       "      <td>{\"SpiceJet\": \"neutral\"}</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>MMTC Q2 net loss at Rs 10.4 crore</td>\n",
-       "      <td>{\"MMTC\": \"neutral\"}</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Mid-cap funds can deliver more, stay put: Experts</td>\n",
-       "      <td>{\"Mid-cap funds\": \"positive\"}</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Mid caps now turn into market darlings</td>\n",
-       "      <td>{\"Mid caps\": \"positive\"}</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Market seeing patience, if not conviction: Pra...</td>\n",
-       "      <td>{\"Market\": \"neutral\"}</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10748</th>\n",
-       "      <td>10749</td>\n",
-       "      <td>Negative on Chambal, Advanta: Mitesh Thacker</td>\n",
-       "      <td>{\"Chambal\": \"negative\", \"Advanta\": \"negative\"}</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10749</th>\n",
-       "      <td>10750</td>\n",
-       "      <td>Small, Mid-cap stocks may emerge outperformers</td>\n",
-       "      <td>{\"Small\": \"positive\", \"Mid-cap stocks\": \"posit...</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10750</th>\n",
-       "      <td>10751</td>\n",
-       "      <td>Rupee slips against US dollar</td>\n",
-       "      <td>{\"Rupee\": \"negative\", \"US dollar\": \"neutral\"}</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10751</th>\n",
-       "      <td>10752</td>\n",
-       "      <td>Rupee weak against US dollar</td>\n",
-       "      <td>{\"Rupee\": \"negative\", \"US dollar\": \"neutral\"}</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10752</th>\n",
-       "      <td>10753</td>\n",
-       "      <td>Australia shares flat; energy drags</td>\n",
-       "      <td>{\"Australia shares\": \"neutral\", \"energy\": \"neu...</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>10753 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       S No.                                              Title  \\\n",
-       "0          1  SpiceJet to issue 6.4 crore warrants to promoters   \n",
-       "1          2                  MMTC Q2 net loss at Rs 10.4 crore   \n",
-       "2          3  Mid-cap funds can deliver more, stay put: Experts   \n",
-       "3          4             Mid caps now turn into market darlings   \n",
-       "4          5  Market seeing patience, if not conviction: Pra...   \n",
-       "...      ...                                                ...   \n",
-       "10748  10749       Negative on Chambal, Advanta: Mitesh Thacker   \n",
-       "10749  10750     Small, Mid-cap stocks may emerge outperformers   \n",
-       "10750  10751                      Rupee slips against US dollar   \n",
-       "10751  10752                       Rupee weak against US dollar   \n",
-       "10752  10753                Australia shares flat; energy drags   \n",
-       "\n",
-       "                                               Decisions  Words  \n",
-       "0                                {\"SpiceJet\": \"neutral\"}      8  \n",
-       "1                                    {\"MMTC\": \"neutral\"}      8  \n",
-       "2                          {\"Mid-cap funds\": \"positive\"}      8  \n",
-       "3                               {\"Mid caps\": \"positive\"}      7  \n",
-       "4                                  {\"Market\": \"neutral\"}      8  \n",
-       "...                                                  ...    ...  \n",
-       "10748     {\"Chambal\": \"negative\", \"Advanta\": \"negative\"}      6  \n",
-       "10749  {\"Small\": \"positive\", \"Mid-cap stocks\": \"posit...      6  \n",
-       "10750      {\"Rupee\": \"negative\", \"US dollar\": \"neutral\"}      5  \n",
-       "10751      {\"Rupee\": \"negative\", \"US dollar\": \"neutral\"}      5  \n",
-       "10752  {\"Australia shares\": \"neutral\", \"energy\": \"neu...      5  \n",
-       "\n",
-       "[10753 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "id": "101868f2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# path = 'Downloads/newsTitles2/data.csv'\n",
+    "# path = 'C:/Users/Rolando/Downloads/newsTitles2/data.csv'\n",
     "\n",
     "# df = pd.read_csv(path, encoding = \"ISO-8859-1\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "id": "93d8a2de",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Sentence</th>\n",
-       "      <th>Sentiment</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>The GeoSolutions technology will leverage Bene...</td>\n",
-       "      <td>positive</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>$ESI on lows, down $1.50 to $2.50 BK a real po...</td>\n",
-       "      <td>negative</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>For the last quarter of 2010 , Componenta 's n...</td>\n",
-       "      <td>positive</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>According to the Finnish-Russian Chamber of Co...</td>\n",
-       "      <td>neutral</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>The Swedish buyout firm has sold its remaining...</td>\n",
-       "      <td>neutral</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5837</th>\n",
-       "      <td>RISING costs have forced packaging producer Hu...</td>\n",
-       "      <td>negative</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5838</th>\n",
-       "      <td>Nordic Walking was first used as a summer trai...</td>\n",
-       "      <td>neutral</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5839</th>\n",
-       "      <td>According shipping company Viking Line , the E...</td>\n",
-       "      <td>neutral</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5840</th>\n",
-       "      <td>In the building and home improvement trade , s...</td>\n",
-       "      <td>neutral</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5841</th>\n",
-       "      <td>HELSINKI AFX - KCI Konecranes said it has won ...</td>\n",
-       "      <td>positive</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5842 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                               Sentence Sentiment\n",
-       "0     The GeoSolutions technology will leverage Bene...  positive\n",
-       "1     $ESI on lows, down $1.50 to $2.50 BK a real po...  negative\n",
-       "2     For the last quarter of 2010 , Componenta 's n...  positive\n",
-       "3     According to the Finnish-Russian Chamber of Co...   neutral\n",
-       "4     The Swedish buyout firm has sold its remaining...   neutral\n",
-       "...                                                 ...       ...\n",
-       "5837  RISING costs have forced packaging producer Hu...  negative\n",
-       "5838  Nordic Walking was first used as a summer trai...   neutral\n",
-       "5839  According shipping company Viking Line , the E...   neutral\n",
-       "5840  In the building and home improvement trade , s...   neutral\n",
-       "5841  HELSINKI AFX - KCI Konecranes said it has won ...  positive\n",
-       "\n",
-       "[5842 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 43,
    "id": "801583fe",
    "metadata": {},
    "outputs": [],
@@ -491,12 +238,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 71,
    "id": "5450af79",
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = df['sentence'][0]"
+    "text = df.sample(1)['sentence'].iloc[0]"
    ]
   },
   {
@@ -509,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 72,
    "id": "de99d732",
    "metadata": {
     "scrolled": true
@@ -519,7 +266,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Gran, Russia)\n"
+      "(some EUR 5 million, USD 6.5 m, annual)\n"
      ]
     }
    ],
@@ -541,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 73,
    "id": "dc2dfb70",
    "metadata": {
     "scrolled": true
@@ -551,7 +298,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['russia', 'production', 'plans', 'move', 'growing', 'gran', 'company', 'company', 'although', 'according']\n"
+      "['eur 5 million', 'usd 6', 'cost savings', 'annual basis', '5', 'plan', 'generate', 'estimated']\n"
      ]
     }
    ],
@@ -574,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 74,
    "id": "d043ef4a",
    "metadata": {},
    "outputs": [],
@@ -590,7 +337,7 @@
     "#     stop = stop.splitlines()\n",
     "#     stop = str(stop)\n",
     "#     stop = stop.translate(str.maketrans('', '', string.punctuation))\n",
-    "    stopwords_list = list(stopwords.words('english'))\n",
+    "    stopwords_list = list(sw.words('english'))\n",
     "#     stopwords_list.extend(stop.split())\n",
     "    \n",
     "    # vectorizing the words use tf-idf\n",
@@ -609,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 75,
    "id": "fb4c6258",
    "metadata": {},
    "outputs": [
@@ -617,16 +364,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     keywords    vector\n",
-      "0     company  0.577350\n",
-      "1   according  0.288675\n",
-      "2    although  0.288675\n",
-      "3        gran  0.288675\n",
-      "4     growing  0.288675\n",
-      "5        move  0.288675\n",
-      "6       plans  0.288675\n",
-      "7  production  0.288675\n",
-      "8      russia  0.288675\n"
+      "    keywords    vector\n",
+      "0     annual  0.316228\n",
+      "1      basis  0.316228\n",
+      "2       cost  0.316228\n",
+      "3  estimated  0.316228\n",
+      "4        eur  0.316228\n",
+      "5   generate  0.316228\n",
+      "6    million  0.316228\n",
+      "7       plan  0.316228\n",
+      "8    savings  0.316228\n",
+      "9        usd  0.316228\n"
      ]
     }
    ],
@@ -638,9 +386,103 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6520b931",
+   "metadata": {},
+   "source": [
+    "KEYBERT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "01aff56d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Install the libraries\n",
+    "# !pip install keybert\n",
+    "# !pip install sentence-transformers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "58444dd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import them\n",
+    "from keybert import KeyBERT\n",
+    "from sentence_transformers import SentenceTransformer\n",
+    "\n",
+    "# To show the execution times\n",
+    "# !pip install ipython-autotime\n",
+    "# %load_ext autotime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "d8dd3dc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sent_trans = SentenceTransformer('sentence-transformers/all-mpnet-base-v2')\n",
+    "keyBERT_model = KeyBERT(model = sent_trans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "2c9e7ce5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_terms(document, n_gram_range = (3,3), \n",
+    "                  top_N=5, model=keyBERT_model, diversity_threshold = 0.7):\n",
+    "\n",
+    "  keywords = model.extract_keywords(document, stop_words='english', \n",
+    "                                    keyphrase_ngram_range=(1, 3),\n",
+    "                                    use_mmr=True, \n",
+    "                                    diversity = diversity_threshold,\n",
+    "                                    top_n = top_N)\n",
+    "  \n",
+    "  return sorted(keywords, key=lambda tup:(-tup[1], tup[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "ef3ced5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Text: The plan is estimated to generate some EUR 5 million ( USD 6.5 m ) in cost savings on an annual basis ..\n",
+      "Length: 23\n",
+      "('cost savings annual', 0.5425)\n",
+      "('generate eur million', 0.3755)\n",
+      "('plan', 0.3277)\n",
+      "('usd cost', 0.2052)\n",
+      "('basis', 0.0321)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Text: {text}.\\nLength: {len(text.split())}')\n",
+    "best_terms = extract_terms(text)\n",
+    "\n",
+    "for terms_and_score in best_terms:\n",
+    "  print(terms_and_score)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01aff56d",
+   "id": "7cfc9f65",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -648,7 +490,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -663,6 +505,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "08ba90eee69f3a77939d4b93a599d928de56855a4df77fff9ebc3dca0b57665a"
+   }
   }
  },
  "nbformat": 4,
