--- a/dev/Spacy-Rake-Tfidf-keybert-yake.ipynb
+++ b/dev/Spacy-Rake-Tfidf-keybert-yake.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 61,
    "id": "494531e8",
    "metadata": {},
    "outputs": [],
@@ -18,23 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 62,
    "id": "6d47fc1f",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = 'C:/Users/Rolando/Downloads/financialphrases/all-data.csv'\n",
-    "\n",
-    "df = pd.read_csv(path, encoding = \"ISO-8859-1\", names = ['sentiment', 'sentence'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "id": "ada23f6b",
-   "metadata": {
-    "scrolled": true
-   },
    "outputs": [
     {
      "data": {
@@ -139,96 +125,58 @@
        "[4846 rows x 2 columns]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "path = '../dataset/finRep/FinancialPhraseBank/all-data.csv'\n",
+    "\n",
+    "df = pd.read_csv(path, encoding = \"ISO-8859-1\", names = ['sentiment', 'sentence'])\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "id": "b233eb65",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       According to Gran , the company has no plans t...\n",
-       "1       Technopolis plans to develop in stages an area...\n",
-       "2       The international electronic industry company ...\n",
-       "3       With the new production plant the company woul...\n",
-       "4       According to the company 's updated strategy f...\n",
-       "                              ...                        \n",
-       "4841    LONDON MarketWatch -- Share prices ended lower...\n",
-       "4842    Rinkuskiai 's beer sales fell by 6.5 per cent ...\n",
-       "4843    Operating profit fell to EUR 35.4 mn from EUR ...\n",
-       "4844    Net sales of the Paper segment decreased to EU...\n",
-       "4845    Sales in Finland decreased by 10.5 % in Januar...\n",
-       "Name: sentence, Length: 4846, dtype: object"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['sentence']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 63,
    "id": "d642c185",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# path = 'C:/Users/Rolando/Downloads/newsTitles/SEntFiN-v1.1.csv'\n",
+    "# path = '../dataset/finRep/SEntFiN-v1.1/SEntFiN-v1.1.csv'\n",
     "\n",
-    "# df = pd.read_csv(path, encoding = \"ISO-8859-1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "id": "6afa3b5c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# df = pd.read_csv(path, encoding = \"ISO-8859-1\")\n",
     "# df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 64,
    "id": "101868f2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# path = 'C:/Users/Rolando/Downloads/newsTitles2/data.csv'\n",
+    "# import json\n",
     "\n",
-    "# df = pd.read_csv(path, encoding = \"ISO-8859-1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "id": "93d8a2de",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# path = '../dataset/finRep/FiQA/task1_headline_ABSA_train.json'\n",
+    "\n",
+    "# rows = []\n",
+    "# with open(path) as f:\n",
+    "#     d = json.load(f)\n",
+    "\n",
+    "# for key, value in d.items():\n",
+    "#     aux = {'sentence': value['sentence'], 'snippets': value['info'][0]['snippets'], 'target': value['info'][0]['target'], \n",
+    "#     'sentiment_score': value['info'][0]['sentiment_score'], 'aspects': value['info'][0]['aspects']}\n",
+    "#     rows.append(aux)\n",
+    "\n",
+    "# df = pd.DataFrame(rows, columns=['sentence', 'snippets', 'target', 'sentiment_score', 'aspects'])\n",
     "# df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 65,
    "id": "801583fe",
    "metadata": {},
    "outputs": [],
@@ -238,12 +186,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 80,
    "id": "5450af79",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expense ratio was 102.6 % compared to 92.9 % in the corresponding period in 2005 .\n"
+     ]
+    }
+   ],
    "source": [
-    "text = df.sample(1)['sentence'].iloc[0]"
+    "text = df.sample(1)['sentence'].iloc[0]\n",
+    "print(text)"
    ]
   },
   {
@@ -256,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 81,
    "id": "de99d732",
    "metadata": {
     "scrolled": true
@@ -266,7 +223,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(12-month, EUR0, 2004)\n"
+      "(102.6 %, 92.9 %, 2005)\n"
      ]
     }
    ],
@@ -288,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 82,
    "id": "dc2dfb70",
    "metadata": {
     "scrolled": true
@@ -298,7 +255,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['month period decreased', 'turnover decreased', 'operating result', 'profit', 'eur5', 'eur0', 'compared', '6', '4', '2004', '12']\n"
+      "['expense ratio', 'corresponding period', 'compared', '92', '9', '6', '2005', '102']\n"
      ]
     }
    ],
@@ -321,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 83,
    "id": "d043ef4a",
    "metadata": {},
    "outputs": [],
@@ -356,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 84,
    "id": "fb4c6258",
    "metadata": {},
    "outputs": [
@@ -364,17 +321,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    keywords    vector\n",
-      "0  decreased  0.516398\n",
-      "1         12  0.258199\n",
-      "2       2004  0.258199\n",
-      "3   compared  0.258199\n",
-      "4       eur0  0.258199\n",
-      "5       eur5  0.258199\n",
-      "6      month  0.258199\n",
-      "7  operating  0.258199\n",
-      "8     period  0.258199\n",
-      "9     profit  0.258199\n"
+      "        keywords    vector\n",
+      "0            102  0.353553\n",
+      "1           2005  0.353553\n",
+      "2             92  0.353553\n",
+      "3       compared  0.353553\n",
+      "4  corresponding  0.353553\n",
+      "5        expense  0.353553\n",
+      "6         period  0.353553\n",
+      "7          ratio  0.353553\n"
      ]
     }
    ],
@@ -395,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 85,
    "id": "01aff56d",
    "metadata": {},
    "outputs": [],
@@ -407,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 86,
    "id": "58444dd9",
    "metadata": {},
    "outputs": [],
@@ -423,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 87,
    "id": "d8dd3dc7",
    "metadata": {},
    "outputs": [],
@@ -434,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 88,
    "id": "2c9e7ce5",
    "metadata": {},
    "outputs": [],
@@ -453,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 89,
    "id": "ef3ced5e",
    "metadata": {},
    "outputs": [
@@ -461,13 +416,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Text: Operating result for the 12-month period decreased from the profit of EUR0 .4 m while turnover decreased from EUR5 .6 m , as compared to 2004 ..\n",
-      "Length: 27\n",
-      "('turnover decreased eur5', 0.6664)\n",
-      "('operating result', 0.4047)\n",
-      "('12 month period', 0.1871)\n",
-      "('2004', 0.1471)\n",
-      "('compared', 0.0327)\n"
+      "Text: Expense ratio was 102.6 % compared to 92.9 % in the corresponding period in 2005 ..\n",
+      "Length: 16\n",
+      "('expense ratio 102', 0.7213)\n",
+      "('92', 0.2755)\n",
+      "('2005', 0.1734)\n",
+      "('compared', 0.1642)\n",
+      "('corresponding period', 0.1249)\n"
      ]
     }
    ],
@@ -481,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 90,
    "id": "6380f2bf",
    "metadata": {},
    "outputs": [],
@@ -491,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 91,
    "id": "7cfc9f65",
    "metadata": {},
    "outputs": [],
@@ -501,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 92,
    "id": "a6a83577",
    "metadata": {},
    "outputs": [
@@ -509,16 +464,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Operating result', 0.019943439662486344)\n",
-      "('period decreased', 0.021586758591933864)\n",
-      "('turnover decreased', 0.03586555834533851)\n",
-      "('decreased', 0.09671664173256625)\n",
-      "('Operating', 0.10923981997294611)\n",
-      "('period', 0.10923981997294611)\n",
-      "('result', 0.17899586521379354)\n",
-      "('profit', 0.17899586521379354)\n",
-      "('turnover', 0.17899586521379354)\n",
-      "('compared', 0.17899586521379354)\n"
+      "('Expense ratio', 0.015380821171891606)\n",
+      "('Expense', 0.09568045026443411)\n",
+      "('compared', 0.09568045026443411)\n",
+      "('ratio', 0.15831692877998726)\n",
+      "('period', 0.15831692877998726)\n"
      ]
     }
    ],
@@ -532,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 93,
    "id": "e1083223",
    "metadata": {},
    "outputs": [
@@ -540,16 +490,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Operating result', 0.019943439662486344)\n",
-      "('period decreased', 0.021586758591933864)\n",
-      "('turnover decreased', 0.03586555834533851)\n",
-      "('decreased', 0.09671664173256625)\n",
-      "('Operating', 0.10923981997294611)\n",
-      "('period', 0.10923981997294611)\n",
-      "('result', 0.17899586521379354)\n",
-      "('profit', 0.17899586521379354)\n",
-      "('turnover', 0.17899586521379354)\n",
-      "('compared', 0.17899586521379354)\n"
+      "('Expense ratio', 0.015380821171891606)\n",
+      "('Expense', 0.09568045026443411)\n",
+      "('compared', 0.09568045026443411)\n",
+      "('ratio', 0.15831692877998726)\n",
+      "('period', 0.15831692877998726)\n"
      ]
     }
    ],
