--- a/dev/ryk.ipynb
+++ b/dev/ryk.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,36 +15,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  sentiment                                           sentence\n",
-      "0   neutral  According to Gran , the company has no plans t...\n",
-      "1   neutral  Technopolis plans to develop in stages an area...\n",
-      "2  negative  The international electronic industry company ...\n",
-      "3  positive  With the new production plant the company woul...\n",
-      "4  positive  According to the company 's updated strategy f...\n",
-      "5  positive  FINANCING OF ASPOCOMP 'S GROWTH Aspocomp is ag...\n",
-      "6  positive  For the last quarter of 2010 , Componenta 's n...\n",
-      "7  positive  In the third quarter of 2010 , net sales incre...\n",
-      "8  positive  Operating profit rose to EUR 13.1 mn from EUR ...\n",
-      "9  positive  Operating profit totalled EUR 21.1 mn , up fro...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "path = '../dataset/finRep/FinancialPhraseBank/all-data.csv'\n",
-    "df = pd.read_csv(path, encoding = \"ISO-8859-1\", names = ['sentiment', 'sentence'])\n",
-    "print(df[:10])"
+    "dictionarypath = '../dataset/dictionary/Loughran-McDonald_MasterDictionary_1993-2021.csv'\n",
+    "wds_dict = pd.read_csv(dictionarypath)\n",
+    "positive_wds = [row['Word'].lower() for i, row in wds_dict.iterrows() if row['Positive']!=0]\n",
+    "negative_wds = [row['Word'].lower() for i, row in wds_dict.iterrows() if row['Negative']!=0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = '../dataset/finRep/FinancialPhraseBank/all-data.csv'\n",
+    "df = pd.read_csv(path, encoding = \"ISO-8859-1\", names = ['sentiment', 'sentence'])\n",
+    "# print(df[:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,15 +54,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_words(words):\n",
+    "    result = 0\n",
+    "    for word1 in words:\n",
+    "        word1 = word1.split()\n",
+    "        for word in word1:\n",
+    "            if word in positive_wds:\n",
+    "                result = result + 1\n",
+    "                print (\"(%s,%s)\"%(word,\"positive\"))\n",
+    "            elif word in negative_wds:\n",
+    "                result = result - 1\n",
+    "                print (\"(%s,%s)\"%(word,\"negative\"))\n",
+    "            else:\n",
+    "                print (\"(%s,%s)\"%(word,\"neutral\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "`` Because we 're a pension insurance company , we 're required to diversify and not put too much in one asset class .\n",
-      "the sentiment is : negative\n"
+      "Talvivaara Mining Company Plc Talvivaara Mining Company is an internationally significant base metals producer with its primary focus on nickel and zinc using a technology known as bioheapleaching to extract metals out of ore .\n",
+      "the sentiment is : positive\n"
      ]
     }
    ],
@@ -89,9 +104,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['talvivaara mining company plc talvivaara mining company', 'internationally significant base metals producer', 'extract metals', 'zinc using', 'technology known', 'primary focus', 'ore', 'nickel', 'bioheapleaching']\n"
+     ]
+    }
+   ],
    "source": [
     "from rake_nltk import Rake\n",
     "rake_nltk_var = Rake()\n",
@@ -103,7 +126,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(talvivaara,neutral)\n",
+      "(mining,neutral)\n",
+      "(company,neutral)\n",
+      "(plc,neutral)\n",
+      "(talvivaara,neutral)\n",
+      "(mining,neutral)\n",
+      "(company,neutral)\n",
+      "(internationally,neutral)\n",
+      "(significant,neutral)\n",
+      "(base,neutral)\n",
+      "(metals,neutral)\n",
+      "(producer,neutral)\n",
+      "(extract,neutral)\n",
+      "(metals,neutral)\n",
+      "(zinc,neutral)\n",
+      "(using,neutral)\n",
+      "(technology,neutral)\n",
+      "(known,neutral)\n",
+      "(primary,neutral)\n",
+      "(focus,neutral)\n",
+      "(ore,neutral)\n",
+      "(nickel,neutral)\n",
+      "(bioheapleaching,neutral)\n"
+     ]
+    }
+   ],
+   "source": [
+    "compare_words(keyword_extracted)\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,23 +261,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Positive : ['great']\n",
-      "Neutral : ['20170412', 'terrible', 'dog', 'stop', 'good', 'prices', 'increasing']\n",
-      "Negative : ['bad']\n"
+      "Positive : ['HAPPINESS', 'ENJOYS', 'PLEASURE', 'HAPPY', 'IMPRESSING', 'HONORING', 'REWARDING', 'EXCELLING', 'REWARD', 'BRILLIANT']\n",
+      "Neutral : ['COLLABORATIVE', 'INVENTION', 'COLLABORATES', 'SUCCEED', 'IMPROVES', 'BENEFITTED', 'BREAKTHROUGHS', 'LUCRATIVE', 'ACCOMPLISHMENT', 'EXCEPTIONAL', 'ACCOMPLISHES', 'SATISFYING', 'ACCLAIMED', 'EXCITING', 'SURPASSES', 'ENTHUSIASM', 'ADVANCES', 'ENCOURAGES', 'CREATIVELY', 'ENHANCES', 'OUTPERFORMING', 'ATTAINS', 'BENEFIT', 'SATISFIES', 'BOLSTERED', 'SOLVING', 'BOOM', 'ASSURING', 'INNOVATIVENESS', 'INTEGRITY', 'ATTAINMENT', 'ENHANCEMENT', 'FAVORITES', 'GAINED', 'COLLABORATED', 'STABLE', 'STABILIZING', 'LEADING', 'GREATNESS']\n",
+      "Negative : []\n"
      ]
     }
    ],
    "source": [
     "import nltk\n",
     "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
+    "\n",
     "test_subset=['20170412', 'great', 'bad', 'terrible', 'dog', 'stop', 'good','prices','increasing']\n",
+    "\n",
     "\n",
     "sid = SentimentIntensityAnalyzer()\n",
     "pos_word_list=[]\n",
@@ -235,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -243,8 +309,8 @@
      "output_type": "stream",
      "text": [
       "Positive : ['great', 'good']\n",
-      "Neutral : ['20170412', 'prices', 'increasing', 'fat']\n",
-      "Negative : ['bad', 'terrible', 'bad']\n"
+      "Neutral : ['20170412', 'prices', 'increasing', 'not bad', 'fat']\n",
+      "Negative : ['bad', 'terrible']\n"
      ]
     }
    ],
@@ -269,7 +335,7 @@
     "    print('Neutral :',neu_word_list)    \n",
     "    print('Negative :',neg_word_list)      \n",
     "\n",
-    "word_polarity(['20170412', 'great', 'bad', 'terrible', 'prices', 'increasing', 'good','bad','fat'])"
+    "word_polarity(['20170412', 'great', 'bad', 'terrible', 'prices', 'increasing', 'good','not bad','fat'])"
    ]
   },
   {
