--- a/dev/web_scrapper/link_scrapper.ipynb
+++ b/dev/web_scrapper/link_scrapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,6 +1157,49 @@
     "   df.to_csv('links_sentfin.csv', mode='a', header=False, index=False)\n",
     "\n",
     "# df.to_csv(\"file.csv\", encoding='utf-8', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Filter links and restore csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# path = './links_fiqa.csv'\n",
+    "\n",
+    "# df = pd.read_csv(path, encoding = \"ISO-8859-1\")\n",
+    "# df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df = df[~df['links'].str.contains('reuters')]\n",
+    "# df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import os\n",
+    "# # if file does not exist write header \n",
+    "# if not os.path.isfile('links_fiqa.csv'):\n",
+    "#    df.to_csv('links_fiqa.csv', header='column_names', index=False)\n",
+    "# else: # else it exists so append without writing the header\n",
+    "#    df.to_csv('links_fiqa.csv', mode='a', header=False, index=False)"
    ]
   }
  ],
